[package]
name = "h3-rs"
version = "0.1.0"
authors = ["Bhaskar Mookerji <mookerji@gmail.com>"]
license = "MIT"
description = "Bindings to H3, Uber's Hexagonal hierarchical geospatial indexing system"
repository = "https://github.com/mookerji/h3-rs"
homepage = "https://github.com/mookerji/h3-rs"
keywords = ["bindings", "ffi"]
edition = "2018"
readme = "README.md"

[dependencies]
c_vec = "^1.3.3"
clap = { version = "^2.33.1", features = ["yaml"] }
enum-primitive-derive = "^0.1.0"
geo-types = "0.5.0"
geojson = { version = "0.18.0", features = ["geo-types"] }
h3-sys = { version = "3.6.3", path = "./h3-sys" }
num-traits = "^0.1"

[dev-dependencies]
approx = "^0.3.2"

[[bin]]
path = "src/bin/h3util.rs"
name = "h3util"
